Add privileged smoke test action and stabilize Shizuku integration build path